# taxicab

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  codecov.yaml  pyproject.toml  requirements.txt  setup.py
.github/workflows/: ci.yml  python-publish.yml
docs/: examples.py
taxicab/: __init__.py  _about.py  _api.py  constants.py  distance.py  plot.py
tests/: main.py
tests/data/: test_graph.osm
